@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Chameleon Configuration
-# Wed Aug  7 21:43:55 2013
+# Fri Aug  9 19:56:27 2013
 #
 CONFIG_OPTIMIZATION_LEVEL="-Oz"
 CONFIG_BDMESG=y
@@ -22,7 +22,8 @@ CONFIG_MODULES=y
 # Modules
 #
 # CONFIG_RESOLUTION_MODULE is not set
-# CONFIG_KLIBC_MODULE is not set
+CONFIG_KLIBC_MODULE=y
+# CONFIG_UCLIBCXX_MODULE is not set
 # CONFIG_SATA_MODULE is not set
 CONFIG_KEYLAYOUT_MODULE=m
 # CONFIG_ACPICODEC_MODULE is not set
