@@ -1,8 +1,9 @@
 #
 # Automatically generated make config: don't edit
 # Chameleon Configuration
-# Wed Aug  7 21:43:55 2013
+# Fri Aug  9 19:56:27 2013
 #
+CONFIG_KLIBC_MODULE=y
 CONFIG_BOOT1_HFS_VERBOSE=y
 CONFIG_BOOT1_HFS=y
 CONFIG_MODULES=y
