@@ -1,11 +1,12 @@
 ;
 ; Automatically generated make config: don't edit
 ; Chameleon Configuration
-; Wed Aug  7 21:43:55 2013
+; Fri Aug  9 19:56:27 2013
 ;
+CONFIG_UCLIBCXX_MODULE EQU 0
 CONFIG_BOOT1_HFS_DEBUG EQU 0
 CONFIG_SATA_MODULE EQU 0
-CONFIG_KLIBC_MODULE EQU 0
+CONFIG_KLIBC_MODULE EQU 1
 CONFIG_BOOT0_DEBUG EQU 0
 CONFIG_OPENUP EQU 0
 CONFIG_BOOT1_HFS_VERBOSE EQU 1
