@@ -85,7 +85,8 @@ Options useful in the org.chameleon.Boot.plist file:
     VBIOS=Yes|No          Inject NVIDIA VBIOS into device-properties.
     display_0=<value>     Inject alternate value of display-cfg into NVDA,Display-A@0 (HEX).
     display_1=<value>     Inject alternate value of display-cfg into NVDA,Display-B@1 (HEX).
-    EnableHDMIAudio=Yes	  Inject HDMI audio for NVIDIA
+    IGPlatformID=<value>  Override or set Intel HD Graphics Platform ID
+    IGPEnabler=Yes|No     Automatic device-properties generation for Intel IGP when GraphicsEnabler=No
 
   EthernetBuiltIn=Yes|No  Automatic "built-in"=yes device-properties generation
                           for ethernet interfaces.
